# haunt

./: .env  .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: commands.rs  local.rs  lockfile.rs  mod.rs  player.rs  pvp.rs
src-tauri/src/api/commands/: games.rs  login.rs  mod.rs
src-tauri/src/api/local/: entitlements.rs  mod.rs  presence.rs  sessions.rs
src-tauri/src/api/pvp/: matchdata.rs  mmr.rs  names.rs
src-tauri/src/api/pvp/matchdata/: ingame.rs  pregame.rs
src-tauri/src/api/valapi/: agents.rs  mod.rs  seasons.rs  urls.rs
src/components/: Greet.vue  PlayerCard.vue
src/lib/: stores.ts  types.ts
src/routes/: IngameView.vue  LoginView.vue  PregameView.vue
src/stores/: userProfile.ts
