[package]
name = "haunt"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
base64 = "0.21.0"
futures = "0.3.28"
color-eyre = "0.6.2"
thiserror = "1.0.40"
heck = "0.4.1"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_warn"] }
tracing-subscriber = "0.3.17"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
